manifests/cluster-prometheus/spinnaker-prometheus/spin-prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: spin-prometheus
  name: prometheus-spin-prometheus
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app: prometheus
    prometheus: spin-prometheus
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
