manifests/cluster-prometheus/spinnaker-prometheus/spin-prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: spin-prometheus.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-spin-prometheus
          servicePort: 9090
